src/objects/LTE__Site__c.object
<CustomObject>
    <description>Sites are a collection of pages displayed in the lightning community.</description>
    <fields>
        <fullName>LTE__Address_Book_Instructions__c</fullName>
        <description>This field displays as instructional text on the Address Book page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the Address Book page in the community.</inlineHelpText>
        <label>Address Book Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Assign_Members_Contact_Field_Set__c</fullName>
        <description>This field defines the field set to be used for the Add Member button on the assignments component.</description>
        <inlineHelpText>This field defines the field set to be used for the Add Member button on the assignments component.</inlineHelpText>
        <label>Assign Members Contact Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Badges_Instructions__c</fullName>
        <description>This field displays as instructional text on the badge page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the badge page in the community.</inlineHelpText>
        <label>Badges Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Captcha_Lightning_Component__c</fullName>
        <description>Defines the component that will be displayed for the captcha.</description>
        <inlineHelpText>Defines the component that will be displayed for the captcha.</inlineHelpText>
        <label>Captcha Lightning Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Community_ID__c</fullName>
        <description>Defines the Community that houses this site.</description>
        <inlineHelpText>Defines the Community that houses this site.</inlineHelpText>
        <label>Community ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Community_Name__c</fullName>
        <description>This field helps retrieve the community ID to relate the site to the appropriate community. Enter the exact community name here to have the community id populated in its field.</description>
        <inlineHelpText>This field helps retrieve the community ID to relate the site to the appropriate community. Enter the exact community name here to have the community id populated in its field.</inlineHelpText>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Cookie_Decline_Redirect_URL__c</fullName>
        <description>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</description>
        <inlineHelpText>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</inlineHelpText>
        <label>Cookie Decline Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Create_Account_Override_URL__c</fullName>
        <description>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</description>
        <inlineHelpText>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</inlineHelpText>
        <label>Create Account Override URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Default_Event_Listing__c</fullName>
        <description>This field defines the default view for the event listing page.</description>
        <inlineHelpText>This field defines the default view for the event listing page.</inlineHelpText>
        <label>Default Event Listing</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large Tile</fullName>
                    <default>true</default>
                    <label>Large Tile</label>
                </value>
                <value>
                    <fullName>Small Tile</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Geo</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                    <isActive>false</isActive>
                    <label>Tile</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTE__Display_Enhanced_List_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to display the enhanced list view in the event listing page.</description>
        <inlineHelpText>Check this field to display the enhanced list view in the event listing page.</inlineHelpText>
        <label>Display Enhanced List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Display_Geo_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to display the geo-location view in the event listing page.</description>
        <inlineHelpText>Check this field to display the geo-location view in the event listing page.</inlineHelpText>
        <label>Display Geo Location View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Display_Large_Tile_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to display the large tile view in the event listing page.</description>
        <inlineHelpText>Check this field to display the large tile view in the event listing page.</inlineHelpText>
        <label>Display Large Tile View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Display_Small_Tile_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to display the small tile view in the event listing page.</description>
        <inlineHelpText>Check this field to display the small tile view in the event listing page.</inlineHelpText>
        <label>Display Small Tile View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Combined with access permissions, this field restricts visibility to the site.</description>
        <inlineHelpText>Combined with access permissions, this field restricts visibility to the site.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Enable_Captcha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field, a captcha will be presented to users using the Create Account and Continue as Guest pages.</description>
        <inlineHelpText>By checking this field, a captcha will be presented to users using the Create Account and Continue as Guest pages.</inlineHelpText>
        <label>Enable Captcha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Enable_Cookie_Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</description>
        <inlineHelpText>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</inlineHelpText>
        <label>Enable Cookie Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Enable_Event_Listing_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field, filters will be enabled for the event listing.</description>
        <inlineHelpText>By checking this field, filters will be enabled for the event listing.</inlineHelpText>
        <label>Enable Event Listing Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Event_Listing_Filters__c</fullName>
        <description>This field holds the values for the fields that are used as filters in the Event Listing.</description>
        <inlineHelpText>This field holds the values for the fields that are used as filters in the Event Listing.</inlineHelpText>
        <label>Event Listing Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LTE__Event_Sort_Fields__c</fullName>
        <description>Defines the fields used to sort the results in the Events listing page.</description>
        <inlineHelpText>Defines the fields used to sort the results in the Events listing page.</inlineHelpText>
        <label>Event Sort Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LTE__Featured_Event_Carousel_Timer__c</fullName>
        <description>The value defined in this field controls the frequency, in seconds, at which the banner scrolls from one image to the next.</description>
        <inlineHelpText>The value defined in this field controls the frequency, in seconds, at which the banner scrolls from one image to the next.</inlineHelpText>
        <label>Featured Event Carousel Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTE__Geo_Location_Radius_Filter_Values_CSV__c</fullName>
        <description>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</description>
        <inlineHelpText>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</inlineHelpText>
        <label>Geo Location Radius Filter Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LTE__Geo_Location_Radius_Filter_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</description>
        <inlineHelpText>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Invoices_Instructions__c</fullName>
        <description>Text displays on the Invoices Page in the community.</description>
        <inlineHelpText>Text displays on the Invoices Page in the community.</inlineHelpText>
        <label>Invoices Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as the default site when no site is found on various pages in the community.</description>
        <inlineHelpText>Used as the default site when no site is found on various pages in the community.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Logo_Image__c</fullName>
        <description>Image to be displayed for the logo.</description>
        <inlineHelpText>Image to be displayed for the logo.</inlineHelpText>
        <label>Logo Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Logo_Target_URL__c</fullName>
        <description>When logo is clicked, user brought to the page populated here.</description>
        <inlineHelpText>When logo is clicked, user brought to the page populated here.</inlineHelpText>
        <label>Logo Target URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Manage_Subscription_Instructions__c</fullName>
        <description>This field displays as instructional text on the subscription page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the subscription page in the community.</inlineHelpText>
        <label>Manage Subscription Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__My_Info_Instructions__c</fullName>
        <description>This field displays as instructional text on the My Info page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the My Info page in the community.</inlineHelpText>
        <label>My Info Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Payment_Method_Instructions__c</fullName>
        <description>This field displays as instructional text on the Payment Method page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the Payment Method page in the community.</inlineHelpText>
        <label>Payment Method Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Payments_Page_Instructions__c</fullName>
        <description>This field displays as instructional text on the Payments page in the community.</description>
        <inlineHelpText>This field displays as instructional text on the Payments page in the community.</inlineHelpText>
        <label>Payments Page Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Profile_Contact_Fieldset_CSV__c</fullName>
        <description>Comma separated field set names that will be displayed in the Community on the My Info page.</description>
        <inlineHelpText>Comma separated field set names that will be displayed in the Community on the My Info page.</inlineHelpText>
        <label>Profile Contact Fieldset(s) CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Site_URL__c</fullName>
        <description>This field defines the URL for the related community.</description>
        <inlineHelpText>This field defines the URL for the related community.</inlineHelpText>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the store to be used for this site.</description>
        <inlineHelpText>Defines the store to be used for this site.</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Site</label>
    <listViews>
        <fullName>LTE__All</fullName>
        <columns>NAME</columns>
        <columns>LTE__Community_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>